fix wrapping of popup text in course nav

--- a/src/courseware/_course-content-01.scss
+++ b/src/courseware/_course-content-01.scss
@@ -355,7 +355,7 @@
                 }
 
                 p {
-                  white-space: inherit;
+                  white-space: pre;
                   font-size: 1.4rem;
                   width: 42rem;
                   padding: 1rem;
